--- a/src/index.css
+++ b/src/index.css
@@ -168,8 +168,7 @@ a {
 }
 
 a:hover {
-  color: var(--primary-hover);
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 /* LIST STYLES */
